--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,4 +1,67 @@
 * {
   padding: 0;
   margin: 0;
-}  
+}
+
+body {
+  overflow-x: hidden;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+}
+
+
+/* Sidebar Styles */
+
+#sidebar {
+  z-index: 1000;
+  width: 100%;
+  height: 100vh;
+  overflow-y: auto;
+  background: #37474F;
+}
+
+#sidebar header {
+  background-color: #263238;
+  font-size: 20px;
+  line-height: 52px;
+  text-align: center;
+}
+
+#sidebar header a {
+  color: #fff;
+  display: block;
+  text-decoration: none;
+}
+
+#sidebar header a:hover {
+  color: #fff;
+}
+
+#sidebar .nav li {
+  width: 100%;
+}
+
+#sidebar .nav a{
+  display: block;
+  width: 100%;
+  background: none;
+  border-bottom: 1px solid #455A64;
+  color: #CFD8DC;
+  font-size: 14px;
+  padding: 16px 24px;
+}
+
+#sidebar .nav a:hover{
+  background: none;
+  color: #ECEFF1;
+}
+
+#sidebar .nav a i{
+  margin-right: 16px;
+}
+
+.custom-row {
+  width: 97.5%;
+  margin-left: 1.5%;
+  margin-top: 20px;
+}
