--- a/src/css/App.css
+++ b/src/css/App.css
@@ -15,7 +15,7 @@ body {
 #sidebar {
   z-index: 1000;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow-y: auto;
   background: #37474F;
 }
