--- a/src/css/App.css
+++ b/src/css/App.css
@@ -65,3 +65,12 @@ body {
   margin-left: 1.5%;
   margin-top: 20px;
 }
+
+.table-condensed {
+  padding: 1px;
+  font-size: 13px;
+}
+
+.table-condensed th {
+  padding: 3px;
+}
