--- a/src/css/PlayerJersey.css
+++ b/src/css/PlayerJersey.css
@@ -41,6 +41,7 @@
     font-weight: bold;
     text-align: center;
     font-size: 14px;
+    height: 50px;
 }
 
 .jersey-number {
@@ -49,6 +50,7 @@
     font-size: 60px;
     padding-top: 5px;
     font-weight: bold;
+    height: 93px
 }
 
 .player-info {
