--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,6 +8,7 @@ body {
   overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
+  background-color:rgb(241, 241, 241)
 }
 
 
