--- a/src/css/PlayerListStyles.css
+++ b/src/css/PlayerListStyles.css
@@ -3,3 +3,96 @@
     border-radius: 10px;
     background: #fff;
 }
+
+.player-list-item {
+    display: flex;
+    padding: 5px;
+    border-bottom: 1px solid rgb(206, 212, 218);
+}
+.player-list-item:last-child {
+    padding: 5px;
+    border-bottom: 0px;
+}
+
+.team-position-nugget-wrapper {
+    width: 48px;
+    margin: 0 4px;
+}
+.team-position-nugget-wrapper .nugget{
+    border-radius: 6px;
+    overflow: hidden;
+    text-align: center;
+    font-size: 13px;
+    height: 52px;
+    width: 50px;
+}
+.team-position-nugget-wrapper .nugget .nugget-up {
+    height:50%;
+    background: #000;
+    padding-top: 3px;
+    color: #fff;
+    font-weight: bold;
+}
+.team-position-nugget-wrapper .nugget .nugget-down{
+    height:50%;
+    padding: 1.5px;
+    vertical-align: middle;
+    font-weight: bold;
+    background: #f1f1f1
+}
+.player-list-info-wrapper {
+    width: calc(100%)
+}
+.player-list-info-wrapper .player-list-name {
+    font-size: 20px;
+    padding: 0px 6px;
+}
+
+.player-list-info-wrapper .player-list-info {
+    font-size:12px;
+    padding: 0px 6px;
+}
+
+.player-list-info-wrapper .player-list-info span{
+    width: 33%;
+    display: inline-block;
+}
+
+.player-list-info-wrapper .player-list-info .average-points{
+    text-align: center;
+}
+
+.player-list-info-wrapper .player-list-info .popularity{
+    text-align: right;
+}
+
+.add-player-btn-wrapper {
+    display: flex;
+    align-items: center;
+    width: 140px;
+}
+
+.add-player-btn-wrapper .add-player-btn {
+    background: #fff;
+    border: 1px solid rgb(206, 212, 218);
+    transition: 0.1s;
+    padding: 10px 5px;
+    width: 113px;
+    border-radius: 6px;
+    color: #0062cc;
+    font-weight: bold;
+}
+
+.add-player-btn-wrapper .add-player-btn .icon {
+    margin-left: 10px;
+}
+
+.add-player-btn-wrapper .add-player-btn:hover {
+    background: rgb(226, 232, 238);
+}
+.add-player-btn-wrapper .add-player-btn[disabled] {
+    background: rgb(226, 232, 238);
+}
+.add-player-btn-wrapper .add-player-btn[disabled]:hover {
+    background: rgb(226, 232, 238);
+}
