--- a/src/css/PlayerJersey.css
+++ b/src/css/PlayerJersey.css
@@ -11,6 +11,8 @@
     top: 3px;
     opacity: 0;
     transition: 0.1s;
+    z-index: 3;
+    cursor: pointer;
 }
 .player-jersey:hover {
     background: rgba(0,0,0,0.6);
@@ -73,4 +75,30 @@
     background: rgb(241, 241, 241);
     color: #000;
     text-align: center;
+}
+
+.bench-player-jersey {
+    width: 14%;
+    margin-right: 3px;
+
+}
+
+.bench-player-jersey .player-name {
+    font-size: 12px;
+}
+
+.bench-player-jersey .jersey-number {
+    padding-top: 5px;
+    font-size: 24px;
+    height: 40px;
+    padding-bottom: 0;
+}
+
+.bench-player-jersey .player-info {
+    display: flex;
+    width: 70%;
+    margin-left: 12.5%;
+    border-radius: 5px;
+    overflow: hidden;
+    font-size: 12px;
 }
