--- a/src/css/PlayerListStyles.css
+++ b/src/css/PlayerListStyles.css
@@ -38,7 +38,8 @@
     padding: 1.5px;
     vertical-align: middle;
     font-weight: bold;
-    background: #f1f1f1
+    background: #f1f1f1;
+    color: #000;
 }
 .player-list-info-wrapper {
     width: calc(100%)
